# symbolic-data

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AUDIT_2026-07-10.md  CHANGELOG.md  README.md  THIRD_PARTY_LICENSES  mkdocs.yml  pyproject.toml
.github/workflows/: pre-commit.yml  publish.yaml  pytest.yml
assets/catalogs/: AI_DESCARTES_REPORT.md  CP3_BLACKBOX_REPORT.md  CP3_COSMO_REPORT.md  DEDUP_REGISTRY.json  ERBENCH_REPORT.md  FIRST_PRINCIPLES_REPORT.md  PHYSO_STREAMS_REPORT.md  SRBENCH2_BLACKBOX_REPORT.md  VALIDATION_P1.md  ai-descartes.npz  constant.yaml  cp3-blackbox.npz  erbench-densities.yaml  erbench-phybench.yaml  erbench-syneq.yaml  fastsrb.v2.yaml  feynman-bonus.yaml  first-principles.npz  grammarvae.yaml  jin.yaml  keijzer.yaml  korns.yaml  koza.yaml  lample-charton-v23.yaml  livermore.yaml  livermore2.yaml  meier.yaml  neat.yaml  nguyen.yaml  nonic.yaml  pagie.yaml  physo-astro.yaml  physo-class.yaml  physo-streams.npz  poly.yaml  r-rationals.yaml  sine.yaml  soose-fc.yaml  soose-nc.yaml  soose-wc.yaml  (+4 more)
assets/hf_card/: README.md  THIRD_PARTY_NOTICES.md
assets/upstream/: NOTICE_dso.md  dso_conversion_report.json  finite_fraction_fastsrb.json  finite_fraction_report.json
assets_sa/: LICENSE
assets_sa/catalogs/: erbench-eponymous.yaml  erbench-oeis.yaml
configs/test/: skeleton_pool_train.yaml
design/: 0.4.0-versioned-benchmarks.md
docs/: benchmarks.md  cli.md  holdout.md  index.md  registries.md  requirements.txt  sampling.md
src/sr_data/: __init__.py  compilation.py  config_io.py  datasets.py  distributions.py  holdout.py  paths.py  prior_factory.py  registry.py  samples.py  skeleton_pool.py  skeleton_sampling.py  structure.py  support_sampling.py  sympy_timeout.py  tensor_ops.py  token_ops.py
src/symbolic_data/: __init__.py  __main__.py  _evaluation.py  catalog.py  compilation.py  config_io.py  convert_data.py  datasets.py  distributions.py  errors.py  generative.py  paths.py  prior_factory.py  problem.py  registry.py  resolver.py  samples.py  skeleton_pool.py  skeleton_sampling.py  source.py  support_sampling.py  sympy_timeout.py  tensor_ops.py
tests/: test_catalog.py  test_cli.py  test_convert_data.py  test_curated_benchmarks.py  test_datasets.py  test_decontamination.py  test_distributions.py  test_generative.py  test_generative_byname.py  test_gt_kind.py  test_holdout_manager.py  test_per_point_rejection.py  test_problem.py  test_registry.py  test_resolver.py  test_samples.py  test_source.py
tests/data/: fastsrb_mini.yaml
tests/golden/: fastsrb_recipe.npz
tools/: audit_finite_fraction.py  build_ai_descartes.py  build_benchmark_specs.py  build_cp3_blackbox.py  build_cp3_cosmo.py  build_dedup_registry.py  build_feynman_bonus.py  build_first_principles.py  build_physo_streams.py  build_srbench2_blackbox.py  build_srsd_dummy.py  dso_to_catalogs.py  erbench_to_catalogs.py  lint_catalogs.py  publish_catalogs.py  publish_catalogs_sa.py  soose_to_catalogs.py
(+30 files in other folders)
