[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "symbolic-data"
version = "0.9.0"
description = "Model-agnostic symbolic-regression data layer: Problem, versioned ProblemCatalog, and ProblemSource (curated sets / on-the-fly generation / fixed)."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Paul Saegert" }]
keywords = ["symbolic-regression", "dataset", "sampling", "holdout", "expression"]
dependencies = [
    "numpy",
    "scikit-learn",
    "simplipy>=0.3.1",
    "pyyaml",
    "tqdm",
    "huggingface_hub",
]

[project.optional-dependencies]
sympy = ["sympy"]
ingest = ["pandas"]
dev = ["pytest", "pytest-cov", "pandas", "sympy"]

[project.scripts]
symbolic-data = "symbolic_data.__main__:main"

[project.urls]
Homepage = "https://github.com/psaegert/symbolic-data"
Repository = "https://github.com/psaegert/symbolic-data"

[tool.setuptools.packages.find]
where = ["src"]

[tool.flake8]
max-line-length = 250
extend-ignore = ["E203", "W503"]
per-file-ignores = ["__init__.py:F401"]
exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]
